--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'Poetry'
+- GITenberg
 title: Uncle Walt [Walt Mason], the Poet Philosopher
 url: http://www.gutenberg.org/ebooks/41397
